<resources>
    <string name="app_name">闪亮的日子</string>
    <string name="app_label">闪亮的日子</string>
    <string name="edit_title">编辑标题</string>
    <string name="edit_content">编辑內容</string>
    <string name="ok_label">保存</string>
    <string name="confirm_label">确定</string>
    <string name="go_back_label">取消</string>
    <string name="title_label">标题</string>
    <string name="priority_label">分类</string>
    <string name="select_priority_label">选择分类</string>
    <string name="enddate_label">日期</string>
    <string name="default_underline">点击此处添加</string>
    <string name="remark_label">备注</string>
    <string name="remark_hint">添加备注</string>
    <string name="delete_action">删除数据</string>
    <string name="share_action">分享给好友</string>
    <string name="state_opened">打开</string>
    <string name="state_closed">关闭</string>
    <string name="save_successfully">保存成功</string>
    <string name="endDateMust">日期不能为空</string>
    <string name="titleMust">标题不能为空</string>
    <string name="typeMust">添加失败，分类不能为空!</string>
    <string name="loadDataError">: ( 抱歉,数据加载错误</string>
    <string name="operationSuccess">操作成功!</string>
    <string name="deleteError">删除数据失败!</string>
    <string name="days">天</string>
    <string name="setting_rate">去评分</string>
    <string name="setting_help">应用帮助</string>
    <string name="setting_feedback">反馈(您的宝贵意见)</string>
    <string name="setting_about">关于</string>
    <string name="version">版本:</string>
    <string name="contact">QQ:3049638357</string>
    <string name="author">开发者:dengy</string>
    <string name="mail">dengyan7@gmail.com</string>
    <string name="help_functions">功能:</string>
    <string name="help_functions1">1.自定义计时事件</string>
    <string name="help_functions2">2.支持添加桌面小工具</string>
    <string name="help_type">事件分类:</string>
    <string name="help_type1">1.默认应用自带4个分类:生活，工作，学习，纪念日</string>
    <string name="help_type2">2.用户可以编辑分类,添加自定义分类</string>
    <string name="help_type3">3.置顶选项，可将事件显示在界面最上方</string>
    <string name="help_hint">使用小贴士:</string>
    <string name="help_hint1">1.支持添加桌面小工具</string>
    <string name="help_hint2">2.为了保证桌面小工具能够自动刷新，需要将应用加入白名单(允许自启动)</string>
    <string name="help_hint3">3.编辑页面可分享事件至微信,QQ</string>
    <string name="help_hint4">4.支持设置锁屏密码(更多内容界面)</string>
    <string name="noDataForWidget">提示:没有正在运行的任务!</string>
    <string name="top_label">置顶</string>
    <string name="remind_label">提醒</string>
    <string name="drawer_open">打开导航抽屉</string>
    <string name="drawer_close">关闭导航抽屉</string>
    <string name="action_add">添加</string>
    <string name="menu_more_title">更多内容</string>
    <string name="leftDayLabel">距离</string>
    <string name="topDate_label">目标日:</string>
    <string name="edit_type">点击编辑分类</string>
    <string name="edit_type_title">编辑分类</string>
    <string name="add_type_label">+ 添加</string>
    <string name="type_not_empty">分类不能为空!</string>
    <string name="type_all">全部</string>
    <string name="default_type">生活</string>
    <string name="type_life">生活</string>
    <string name="type_work">工作</string>
    <string name="type_study">学习</string>
    <string name="type_memorial_day">纪念日</string>
    <string name="select_type_dialog">选择分类</string>
    <string name="add_widget_tips">请点击列表中的事件，显示到桌面 :)</string>
    <string name="type_edit_hint">编辑分类</string>
    <string name="type_delete_hint">删除分类</string>
    <string name="add_day">+ 添加新事件</string>
    <string name="confirm_delete_label">确定删除</string>
    <string name="cancel_label">返回</string>
    <string name="no_email_app_installed">:( 没有安装邮箱应用，无法提交反馈!</string>
    <string name="confirm_ok_label">知道了</string>
    <string name="first_open_app_dialog">使用小贴士</string>
    <string name="already_exist">已经存在，添加失败!</string>
    <string name="invalid_widget">小工具对应的事件已被删除!</string>
    <string name="email_title">闪亮的日子反馈</string>
    <string name="select_email_client">请选择一个邮件发送应用:</string>
    <string name="init_data_title">新年</string>
    <string name="days_status_left">还有</string>
    <string name="days_status_passed">已经</string>
    <string name="days_status_passed_detail">已经过了</string>
    <string name="delete_task_confirm">确定删除此事件?</string>
    <string name="delete_type_with_tasks_confirm">该分类有关联事件，删除后，事件将保留，分类被置为:生活，是否继续?</string>
    <string name="unamed_title">未命名事件</string>
    <string name="unamed_type">未命名分类</string>
    <string name="rate_title">如果喜欢这款应用,写下你的意见帮助它改进吧~</string>
    <string name="rate_right_now_text">现在去评价&#160;:&#160;)</string>
    <string name="rate_later_text">稍后提醒我~</string>
    <string name="rate_never_text">残忍的拒绝&#160;:&#160;(</string>
    <string name="share_succ">分享成功</string>
    <string name="share_fail">分享失败</string>
    <string name="share_from">来自</string>
    <string name="sort_end_date_asc">排序:即将发生</string>
    <string name="sort_update_date_desc">排序:最新创建</string>
    <string name="remind_default">无提醒</string>
    <string name="remind_setting_title">提醒设置</string>
    <string name="remind_label1">提前</string>
    <string name="remind_label2">天,于</string>
    <string name="remind_label3">点通知</string>
    <string name="notification_from">来自闪亮的日子应用</string>
    <string name="remind_by_notification">通过通知提醒</string>
    <string name="default_remind_day">1</string>
    <string name="default_remind_hour">9:00</string>
    <string name="at_remind_hour">于</string>
    <string name="remind_hour_hint">(点击此处修改)</string>
    <string name="select_hour_dialog">提醒时间</string>
    <string name="is_today">就是今天</string>
    <string name="widget_textview_maxems">7</string>
    <string name="zzzzz_chuxi">除夕</string>
    <string name="zzzzz_chong">冲</string>
    <string name="zzzzz_solaris">公历</string>
    <string name="zzzzz_lunar">农历</string>
    <string name="zzzzz_txt_time_switch">时间跳转</string>
    <string name="zzzzz_notSupport2050LunarMessage">暂不支持2050年后的农历查询！</string>
    <string name="zzzzz_notSupport1901LunarMessage">暂不支持1902年以前的农历查询！</string>
    <string name="zzzzz_notSupportLunarMessage">暂不支持该农历时间的公历转换，请重新选择日期！</string>
    <string name="zzzzz_notSupportLunarMessage2">暂不支持该公历时间的农历转换，请重新选择日期！</string>
    <string name="zzzzz_ri">日</string>
    <string name="zzzzz_one">一</string>
    <string name="zzzzz_two">二</string>
    <string name="zzzzz_three">三</string>
    <string name="zzzzz_four">四</string>
    <string name="zzzzz_five">五</string>
    <string name="zzzzz_six">六</string>
    <string name="zzzzz_seven">七</string>
    <string name="zzzzz_eight">八</string>
    <string name="zzzzz_nine">九</string>
    <string name="zzzzz_ten">十</string>
    <string name="zzzzz_yearStr">年</string>
    <string name="zzzzz_monthStr">月</string>
    <string name="zzzzz_dayStr">日</string>
    <string name="zzzzz_weekStr">星期</string>
    <string name="zzzzz_leap">闰</string>
    <string name="zzzzz_big">大</string>
    <string name="zzzzz_small">小</string>
    <string name="zzzzz_di">第</string>
    <string name="zzzzz_zhou">周</string>
    <string name="zzzzz_blackFriday">黑色星期五</string>
    <string name="zzzzz_reLife">复活节</string>
    <string name="zzzzz_lunarOne">正</string>
    <string name="zzzzz_na">腊</string>
    <string name="zzzzz_dong">冬</string>
    <string name="zzzzz_gan1">甲子 乙丑 丙寅 丁卯 戊辰 己巳 庚午 辛未 壬申 癸酉 甲戌 乙亥</string>
    <string name="zzzzz_gan2">丙子 丁丑 戊寅 己卯 庚辰 辛巳 壬午 癸未 甲申 乙酉 丙戌 丁亥</string>
    <string name="zzzzz_gan3">戊子 己丑 庚寅 辛卯 壬辰 癸巳 甲午 乙未 丙申 丁酉 戊戌 己亥</string>
    <string name="zzzzz_gan4">庚子 辛丑 壬寅 癸卯 甲辰 乙巳 丙午 丁未 戊申 己酉 庚戌 辛亥</string>
    <string name="zzzzz_gan5">壬子 癸丑 甲寅 乙卯 丙辰 丁巳 戊午 己未 庚申 辛酉 壬戌 癸亥</string>
    <string name="zzzzz_gan6">甲子 乙丑 丙寅 丁卯 戊辰 己巳 庚午 辛未 壬申 癸酉 甲戌 乙亥</string>
    <string name="zzzzz_gan7">丙子 丁丑 戊寅 己卯 庚辰 辛巳 壬午 癸未 甲申 乙酉 丙戌 丁亥</string>
    <string name="zzzzz_gan8">戊子 己丑 庚寅 辛卯 壬辰 癸巳 甲午 乙未 丙申 丁酉 戊戌 己亥</string>
    <string name="zzzzz_gan9">庚子 辛丑 壬寅 癸卯 甲辰 乙巳 丙午 丁未 戊申 己酉 庚戌 辛亥</string>
    <string name="zzzzz_gan10">壬子 癸丑 甲寅 乙卯 丙辰 丁巳 戊午 己未 庚申 辛酉 壬戌 癸亥</string>
    <string name="zzzzz_gan01">甲</string>
    <string name="zzzzz_gan02">乙</string>
    <string name="zzzzz_gan03">丙</string>
    <string name="zzzzz_gan04">丁</string>
    <string name="zzzzz_gan05">戊</string>
    <string name="zzzzz_gan06">己</string>
    <string name="zzzzz_gan07">庚</string>
    <string name="zzzzz_gan08">辛</string>
    <string name="zzzzz_gan09">壬</string>
    <string name="zzzzz_gan010">癸</string>
    <string name="zzzzz_gan21">甲不开仓</string>
    <string name="zzzzz_gan22">乙不栽植</string>
    <string name="zzzzz_gan23">丙不修灶</string>
    <string name="zzzzz_gan24">丁不剃头</string>
    <string name="zzzzz_gan25">戊不受田</string>
    <string name="zzzzz_gan26">己不破券</string>
    <string name="zzzzz_gan27">庚不经络</string>
    <string name="zzzzz_gan28">辛不合酱</string>
    <string name="zzzzz_gan29">壬不泱水</string>
    <string name="zzzzz_gan210">癸不词讼</string>
    <string name="zzzzz_zhi1">子不问卜</string>
    <string name="zzzzz_zhi2">丑不冠带</string>
    <string name="zzzzz_zhi3">寅不祭祀</string>
    <string name="zzzzz_zhi4">卯不穿井</string>
    <string name="zzzzz_zhi5">辰不哭泣</string>
    <string name="zzzzz_zhi6">巳不远行</string>
    <string name="zzzzz_zhi7">午不苫盖</string>
    <string name="zzzzz_zhi8">未不服药</string>
    <string name="zzzzz_zhi9">申不安床</string>
    <string name="zzzzz_zhi10">酉不会客</string>
    <string name="zzzzz_zhi11">戌不吃犬</string>
    <string name="zzzzz_zhi12">亥不嫁娶</string>
    <string name="zzzzz_zhi01">子</string>
    <string name="zzzzz_zhi02">丑</string>
    <string name="zzzzz_zhi03">寅</string>
    <string name="zzzzz_zhi04">卯</string>
    <string name="zzzzz_zhi05">辰</string>
    <string name="zzzzz_zhi06">巳</string>
    <string name="zzzzz_zhi07">午</string>
    <string name="zzzzz_zhi08">未</string>
    <string name="zzzzz_zhi09">申</string>
    <string name="zzzzz_zhi010">酉</string>
    <string name="zzzzz_zhi011">戌</string>
    <string name="zzzzz_zhi012">亥</string>
    <string name="zzzzz_animal1">鼠</string>
    <string name="zzzzz_animal2">牛</string>
    <string name="zzzzz_animal3">虎</string>
    <string name="zzzzz_animal4">兔</string>
    <string name="zzzzz_animal5">龙</string>
    <string name="zzzzz_animal6">蛇</string>
    <string name="zzzzz_animal7">马</string>
    <string name="zzzzz_animal8">羊</string>
    <string name="zzzzz_animal9">猴</string>
    <string name="zzzzz_animal10">鸡</string>
    <string name="zzzzz_animal11">狗</string>
    <string name="zzzzz_animal12">猪</string>
    <string name="zzzzz_sFestival1">0101 元旦</string>
    <string name="zzzzz_sFestival2">0214 情人节</string>
    <string name="zzzzz_sFestival3">0308 妇女节</string>
    <string name="zzzzz_sFestival4">0312 植树节</string>
    <string name="zzzzz_sFestival5">0315 消费者权益日</string>
    <string name="zzzzz_sFestival6">0401 愚人节</string>
    <string name="zzzzz_sFestival7">0501 劳动节</string>
    <string name="zzzzz_sFestival8">0504 青年节</string>
    <string name="zzzzz_sFestival9">0512 护士节</string>
    <string name="zzzzz_sFestival10">0601 儿童节</string>
    <string name="zzzzz_sFestival11">0701 建党节 香港回归纪念日</string>
    <string name="zzzzz_sFestival12">0801 建军节</string>
    <string name="zzzzz_sFestival13">0909 毛泽东逝世纪念日</string>
    <string name="zzzzz_sFestival14">0910 教师节</string>
    <string name="zzzzz_sFestival15">0928 孔子诞辰</string>
    <string name="zzzzz_sFestival16">1001 国庆节</string>
    <string name="zzzzz_sFestival17">1006 老人节</string>
    <string name="zzzzz_sFestival18">1024 联合国日</string>
    <string name="zzzzz_sFestival19">1031 万圣节（鬼节）</string>
    <string name="zzzzz_sFestival20">1112 孙中山诞辰纪念日</string>
    <string name="setting_lock_title">锁屏密码</string>
    <string name="new_lock_pwd_label">新密码</string>
    <string name="new_lock_pwd_confirm_label">确认密码</string>
    <string name="find_pwd_q_label">密保问题</string>
    <string name="find_pwd_a_label">问题答案</string>
    <string name="find_pwd_qa_hint">必填:密保问题用于找回密码</string>
    <string name="find_pwd_qa_cannot_empty">请输入密保问题和答案!</string>
    <string name="find_pwd_title">找回密码</string>
    <string name="lock_pwd_forget">忘记密码?</string>
    <string name="lock_screen_title">请输入4位数字锁屏密码</string>
</resources>