<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="10dip"
        android:text="@string/first_open_app_dialog"
        android:gravity="center"
        style="@style/dialogTitle" />           
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dip">
    <TextView 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:textSize="15sp"
    	android:text="@string/help_hint1"
        />
    
    <TextView 
        android:layout_marginTop="5dip"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:textSize="15sp"
    	android:text="@string/help_hint2"
        />
    </LinearLayout>
    
    
</LinearLayout>
