<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
  	android:layout_width="match_parent" 
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dip">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/setting_about"
        android:padding="10dip"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dip"
        android:paddingBottom="20dip"
        android:text="@string/app_name"
        android:textSize="18sp"/>
    
    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dip"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dip"
        android:paddingBottom="20dip"
        android:text="@string/build"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dip"
        android:text="@string/author"/>
    <!-- <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:paddingBottom="20dip"
        android:text="@string/mail"/> -->
    </LinearLayout>
