<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/MyActionBar">

        <Button
            android:id="@+id/find_pwd_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:drawableLeft="@drawable/cancel"
            android:text="@string/cancel_label"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_pwd_title"
            android:gravity="center"
            android:layout_centerVertical="true"
            style="@style/actionbarText"/>

    </RelativeLayout>
    <TextView 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="10dip"
        android:text="@string/find_pwd_qa_cannot_empty"
        android:gravity="center"
        style="@style/dialogTitle" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/find_pwd_q_label"/>

            <TextView
                android:id="@+id/find_pwd_q"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/find_pwd_a_label"/>

            <EditText
                android:id="@+id/find_pwd_a"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="14sp"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/old_lock_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/solid_red"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/find_pwd_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/delete_btn_bg_selector"
                android:text="@string/find_pwd_title"/>
        </LinearLayout>
    </LinearLayout>
    
    
</LinearLayout>
